--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "atc-crisisapp",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://atc-development.github.io/atc-crisisapp/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
