new write-version.cjs file for revision control

--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.0.18",
   "homepage": "https://atc-development.github.io/atc-crisisapp/",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
-  },
+"scripts": {
+  "dev": "vite",
+
+  "prebuild": "node scripts/write-version.cjs",
+  "build": "tsc -b && vite build",
+
+  "lint": "eslint .",
+  "preview": "vite preview",
+
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
+,
   "dependencies": {
     "@azure/msal-browser": "^4.27.0",
     "@azure/msal-react": "^3.0.23",
