--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.27.0",
     "@azure/msal-react": "^3.0.23",
+    "framer-motion": "^12.28.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.525.0",
     "react": "^19.2.3",
